// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TemplateManager Unit Tests setupTemplateConfiguration fails for no file 1`] = `
"Unable to parse config file from path 
      nonExistantFilePath, original error message: Cannot read property 'toString' of undefined"
`;

exports[`TemplateManager Unit Tests setupTemplateConfigurationFromRepo fails for no file 1`] = `
"Unable to parse config file from path 
      https://raw.githubusercontent.com/nonExistantrepo/nonExistantBranch/nonExistantFileName.json, original error message: Cannot read property 'toString' of undefined"
`;
